--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "express": "^4.13.4",
     "request": "^2.72.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^2.10.2",
+    "eslint-config-google": "^0.5.0"
+  },
   "engines": {
     "node": "~4.2"
   },
