--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "botkit": "^0.1.1",
     "config": "^1.20.1",
     "express": "^4.13.4",
+    "github-api": "^2.0.0",
     "request": "^2.72.0"
   },
   "devDependencies": {
